force-app/main/default/objects/openq__OPENQ_Trial__c/openq__OPENQ_Trial__c.object-meta.xml
<CustomObject>
    <label>Trial</label>
    <nameField>
        <displayFormat>TR-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>