force-app/main/default/objects/openq__OPENQ_Trial__c/fields/openq__Design__c.field-meta.xml
<CustomField>
    <fullName>openq__Design__c</fullName>
    <label>Design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>