force-app/main/default/objects/openq__OPENQ_Trial__c/fields/openq__Maximum_Age__c.field-meta.xml
<CustomField>
    <fullName>openq__Maximum_Age__c</fullName>
    <label>Maximum Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>