force-app/main/default/objects/openq__OPENQ_Trial__c/fields/openq__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>openq__Start_Date__c</fullName>
    <label>Start Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>