force-app/main/default/objects/openq__OPENQ_Trial__c/fields/openq__Trial_Sites__c.field-meta.xml
<CustomField>
    <fullName>openq__Trial_Sites__c</fullName>
    <label>Trial Sites</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>