force-app/main/default/objects/openq__OPENQ_Trial__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <columns>NAME</columns>
    <columns>openq__Trial_Type__c</columns>
    <columns>openq__Trial_Description__c</columns>
    <columns>openq__Sponsor__c</columns>
    <columns>openq__Phase__c</columns>
    <columns>openq__Status__c</columns>
    <columns>openq__Disease_State__c</columns>
    <columns>openq__Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>